--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         zoom: 2
       })
       
-      var layerUrl = 'https://ssimpkin.cartodb.com/api/v2/viz/b128db9a-1710-11e6-b2a7-0e674067d321/viz.json';
+      var layerUrl = 'http://documentation.cartodb.com/api/v2/viz/836e37ca-085a-11e4-8834-0edbca4b5057/viz.json';
       
     cartodb.createLayer(map, layerUrl)
     	.addTo(map)
