--- a/index.html
+++ b/index.html
@@ -9,26 +9,9 @@
     html, body {width:100%; height:100%; padding: 0; margin: 0;}
     #cartodb-map { width: 100%; height:100%; background: black;}
   </style>
+<script>
+cartodb.createVis('map', 'http://documentation.cartodb.com/api/v2/viz/2b13c956-e7c1-11e2-806b-5404a6a683d5/viz.json');
 
-  <script>
-    var map;
-    function init(){
-      // initiate leaflet map
-      map = new L.Map('cartodb-map', {
-        center: [0,0],
-        zoom: 2
-      })
-      
-      var layerUrl = 'https://ssimpkin.cartodb.com/api/v2/viz/b128db9a-1710-11e6-b2a7-0e674067d321/viz.json';
-      
-    cartodb.createLayer(map, layerUrl)
-    	.addTo(map)
-    	.on('done', function(layer) {
-		layer.getSubLayer(0).set(subLayerOptions);
-    	}).on('error', function() {
-      //log the error
-    	});  
-    }
   </script>
 </head>
 <body onload="init()">
