--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Layer selector example | CartoDB.js</title>
+    <title>Easy example | CartoDB.js</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
@@ -11,82 +12,40 @@
         padding: 0;
         margin: 0;
       }
-      #layer_selector {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        padding: 0;
-      }
-      #layer_selector ul {
-        padding: 0; margin: 0;
-        list-style-type: none;
-      }
-      #layer_selector li {
-        border-bottom: 1px solid #999;
-        padding: 15px 30px;
-        font-family: "Helvetica", Arial;
-        font-size: 13px;
-        color: #444;
-        cursor: auto;
-      }
-      #layer_selector li:hover {
-        background-color: #F0F0F0;
-        cursor: pointer;
-      }
-      #layer_selector li.selected {
-        background-color: #EEE;
-      }
     </style>
 
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
   </head>
   <body>
     <div id="map"></div>
-    <div id="layer_selector" class="cartodb-infobox">
-      <ul>
-        <li data="all" class="selected">All countries</li>
-        <li data="1000">area >1000 km<sup>2</sup></li>
-        <li data="6000">area >6000 km<sup>2</sup></li>
-        <li data="10000">area >10000 km<sup>2</sup></li>
-        <li data="50000">area >50000 km<sup>2</sup></li>
-      </ul>
-    </div>
 
     <!-- include cartodb.js library -->
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
 
     <script>
-      // create layer selector
-     function createSelector(layer) {
-        var sql = new cartodb.SQL({ user: 'documentation' });
-        var $options = $('#layer_selector li');
-        $options.click(function(e) {
-          // get the area of the selected layer
-          var $li = $(e.target);
-          var area = $li.attr('data');
-          // deselect all and select the clicked one
-          $options.removeClass('selected');
-          $li.addClass('selected');
-          // create query based on data from the layer
-          var query = "select * from european_countries_e";
-          if(area !== 'all') {
-            query = "select * from european_countries_e where area > " + area;
-          }
-          // change the query in the layer to update the map
-          layer.setSQL(query);
-        });
-      }
       function main() {
-        cartodb.createVis('map', 'https://ssimpkin.cartodb.com/api/v2/viz/126c8e26-17a5-11e6-907b-0e5db1731f59/viz.json', {
-          tiles_loader: true,
-          center_lat: 50,
-          center_lon: 20,
-          zoom: 3
+        cartodb.createVis('map', 'http://documentation.cartodb.com/api/v2/viz/2b13c956-e7c1-11e2-806b-5404a6a683d5/viz.json', {
+            shareable: true,
+            title: true,
+            description: true,
+            search: true,
+            tiles_loader: true,
+            center_lat: 0,
+            center_lon: 0,
+            zoom: 2
         })
         .done(function(vis, layers) {
           // layer 0 is the base layer, layer 1 is cartodb layer
-          var subLayer = layers[1].getSubLayer(0);
-          createSelector(subLayer);
+          // setInteraction is disabled by default
+          layers[1].setInteraction(true);
+          layers[1].on('featureOver', function(e, latlng, pos, data) {
+            cartodb.log.log(e, latlng, pos, data);
+          });
+          // you can get the native map to work with it
+          var map = vis.getNativeMap();
+          // now, perform any operations you need
+          // map.setZoom(3);
+          // map.panTo([50.5, 30.5]);
         })
         .error(function(err) {
           console.log(err);
