--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -24,7 +23,7 @@
 
     <script>
       function main() {
-        cartodb.createVis('map', 'http://documentation.cartodb.com/api/v2/viz/2b13c956-e7c1-11e2-806b-5404a6a683d5/viz.json', {
+        cartodb.createVis('map', 'https://ssimpkin.cartodb.com/api/v2/viz/126c8e26-17a5-11e6-907b-0e5db1731f59/viz.json', {
             shareable: true,
             title: true,
             description: true,
